--- a/public/index.html
+++ b/public/index.html
@@ -6,21 +6,23 @@
 
     <link rel="stylesheet" href="./index.css" />
     <script type="text/javascript" src="../src/items.js"></script>
-    <script type="text/javascript" src="../src/promotions.js"></script>
-    <script type="text/javascript" src="../src/best-charge.js"></script>
-    <script type="text/javascript" src="./index.js"></script>
+    <script type="text/javascript"  src="../src/promotions.js"></script>
+    <script type="text/javascript"  src="../src/best-charge.js"></script>
+    <script type="text/javascript"  src="./index.js"></script>
 </head>
+
 <body>
+<form action="" method="post" id="myform">
     <h1>“好多肉”在线点餐系统</h1>
     <div id="items" ></div>
     <div id="promotions"></div>
     <div>
-        <button onclick="calculatePrice()">结算</button>
-        <button onclick="clear()">清除</button>
+        <input type="button" value="结算" onclick="calculatePrice()">
+        <input type="button" value="清除" onclick="clear()">
     </div>
     <pre id="message">
-        /* 请将结算后产生的汇总字符串显示在这里 */
     </pre>
+
     <script>
         var listItems="";
         var promotionItem ="";
@@ -30,9 +32,8 @@
             {
                 listItems+="<span id='menu'>"+ loadAllItems()[i].name+"</span>" +
                     "<span id='menu'>"+loadAllItems()[i].price+ "元</span>" +
-                    "<span id='menu'><input type=\"text\" name=’‘ id=\""  +
-                    loadAllItems()[i].id+
-                    "\"placeholder='请输入数量' oninput=\"value=value.replace(/[^\\d]/g,'')\"></span><br>";
+                    "<span id='menu'>" +
+                    "<input type=\"text\" name=\" " + loadAllItems()[i].id + "\" id=\"a" + i + "\" placeholder='请输入数量' oninput=\"value=value.replace(/[^\\d]/g,'') \" ></span><br>";
 
                 if(loadAllItems()[i].id == loadPromotions()[1].items[j])
                 {
@@ -50,5 +51,6 @@
         document.getElementById("promotions").innerHTML = "--------------------优惠信息----------------------<br><span id='menu_1'>1." +
             loadPromotions()[0].type+"</span><br><span id='menu_1'>2."+loadPromotions()[1].type+":"+promotionItem+"</span><br><br>";
     </script>
+</form>
 </body>
 </html>
